--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@ font-family:'Candel',sans-serif ;
 .category__img {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   height: 100px;
   margin-bottom: 10px;
   box-shadow: 0px 3px 6px rgba(0,0,0,.16);
@@ -55,10 +55,10 @@ font-family:'Candel',sans-serif ;
 }
 
 .category__img--large {
-  height: 330px;
+  height: 175px;
 }
 
 .category__img img {
   width: 100%;
-  object-fit: cover;
+  object-fit: fill;
 }
