--- a/views/viewall.ejs
+++ b/views/viewall.ejs
@@ -8,8 +8,9 @@
     </ol>
   </nav>
 
- <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3 mb-2"> 
-    <% if(categories != '') { %>
+ <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3 mb-5"> 
+  <% if(typeof categories !== 'undefined' && categories.length > 0) { %>
+
         <% categories.forEach(function(category) { %>
         <a href="/categories/<%- category.name %>" class="col text-center category__link">
             <div class="category__img shadow">
@@ -19,4 +20,17 @@
         </a>
         <% }) %>
     <% } %>
+</div>
+
+<div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3 mb-3">
+  <% if(typeof viewById !== 'undefined' && viewById.length > 0) { %>
+      <% viewById.forEach(function(Latest){ %>   
+     <a href="/latest_news/<%- Latest.id %>" class=" col text-center categaroy__link">
+         <div class="category__img  category__img--large shadow">
+             <img src="/img/<%- Latest.image %>" alt="<%- Latest.name %>" loading="lazy">
+         </div>
+         <div class="pt-1"><%- Latest.category%></div>
+     </a>
+   <% }) %>
+   <% } %>
 </div>
