--- a/views/submit_news.ejs
+++ b/views/submit_news.ejs
@@ -75,3 +75,45 @@
   
     </div>
   </div>
+
+
+  <!-- Footer Start -->
+
+  <footer class="footer-distributed mt-5" style="background-color: #1c1b1f; border-radius: 8px;">
+    <div class="footer-left">
+      <img src="img/gamae.jpg" alt="" class="flogo">
+      <p class="footer-links">
+        <a href="/" class="link-1">Home</a>					
+        <a href="/about">About</a>							
+        <a href="/submit-news">Submit</a>					
+        <a href="/contact">Contact</a>
+      </p>
+      <p class="footer-company-name">Company Name © 2015</p>
+    </div>
+    <div class="footer-center">
+      <div>
+        <i class="fa fa-map-marker"></i>
+        <p><span>444 S. Cedros Ave</span> Solana Beach, California</p>
+      </div>
+      <div>
+        <i class="fa fa-phone"></i>
+        <p>+1.555.555.5555</p>
+      </div>
+      <div>
+        <i class="fa fa-envelope"></i>
+        <p><a href="mailto:support@company.com">support@company.com</a></p>
+      </div>
+    </div>
+    <div class="footer-right">
+      <p class="footer-company-about">
+        <span>About the game</span>
+        Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+      </p>
+      <div class="footer-icons">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+      </div>
+    </div>
+  </footer>
