--- a/views/news.ejs
+++ b/views/news.ejs
@@ -33,7 +33,7 @@
       
     <a href="/viewall" class=" col text-center categaroy__link">
         <div class="category__img shadow">
-            <img src="img/gamae.jpg" alt="View all GamingNews" loading="lazy">
+            <img src="img/gameimage.jpg" alt="View all GamingNews" loading="lazy">
         </div>
         <div class="pt-1">View All</div>
     </a>
