--- a/views/layouts/main_layouts.ejs
+++ b/views/layouts/main_layouts.ejs
@@ -19,7 +19,7 @@
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
             <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none" >
-                <img src="/img/gameimage.jpg" height="68" alt="GamingNews Website" id="gamelogo">
+                <img src="/img/gamae.jpg" height="68" alt="GamingNews Website" id="gamelogo">
             </a>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
@@ -30,7 +30,7 @@
             </ul>
 
             <div class="col-md-3 text-end">
-                <form method="POST" action="/search">
+                <form method="post" action="/search">
                     <input type="search" name="searchTerm" class="form-control" placeholder="Search..."
                         aria-label="Search">
                 </form>
