--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -17,7 +17,7 @@ img.logopic {
 body {
 	background-size: cover;
 	background-repeat: no-repeat;
-	margin-top: 4rem;
+	/* margin-top: 4rem; */
   }
 option {
     background: transparent;
