--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,10 +1,5 @@
 <%- include('./layouts/main_layouts.ejs') -%>
 <h1 class="pb-4">Contact Us</h1>
-
-
-
-
-
 <section>
     <div class="container" style="margin-top: 80px;">
       <div class="row">
@@ -19,8 +14,8 @@
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" name="email">
             </div>
               <div class="user">
-                <p>User</p>
-              <input type="text" class="form-control" id="User" placeholder="UserName"  name="user">
+                <p>Your Name</p>
+              <input type="text" class="form-control" id="User" placeholder="Your Name"  name="user">
               </div>
             </div>
             <div class="form-group3">
