--- a/views/layouts/main_layouts.ejs
+++ b/views/layouts/main_layouts.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -26,8 +27,11 @@
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/" type=" button" class="nav-link px-2 link-secondary">Home</a></li>
                 <li><a href="/about" class="nav-link px-2 link-secondary">About</a></li>
-                <li><a href="/submit-news" class="nav-link px-2 link-secondary">Submit</a></li>
                 <li><a href="/contact" class="nav-link px-2 link-secondary">Contact</a></li>
+                <li><a href="/login" class="nav-link px-2 link-secondary">Login</a></li>
+                <li><a href="/submit-news" class="nav-link px-2 link-secondary">Submit</a></li>
+
+              
             </ul>
 
             <div class="col-md-3 text-end">
