--- a/views/submit_news.ejs
+++ b/views/submit_news.ejs
@@ -29,8 +29,8 @@
         <div class="row g-3">
   
           <div class="col-12">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" name="email" id="email" class="form-control">
+            <label for="specialkey" class="form-label">Special Key</label>
+            <input type="password" name="specialkey" id="specialkey" class="form-control" required>
           </div>
   
           <div class="col-12">
