--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,26 +1,23 @@
 <%- include('./layouts/main_layouts.ejs') -%>
-<h1 class="pb-4">Search Result</h1>
-
-<div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-
-    <% if(search != '') { %>
-      <% search.forEach(function(search){ %>
-      <a href="/categories/<%= search.name %>" class="col text-center category__link">
-        <div class="category__img category__img--large shadow">
-          <img src="/img/<%= search.image %>" alt="<%= search.name %>" loading="lazy">
-        </div>
-        <div class="pt-1"><%= search.name %></div>
-      </a>
-      <% }) %>
-    <% } else { %>
-      <p>No items found.</p>
-    <% } %>
-  </div> 
+<h1 class="pb-4">About Us</h1>
 
 
-  <!-- Footer Start -->
+<div class="col-12 mb-4" style="white-space: pre-line;">
+    <h4>
+        Welcome to our page, . We're dedicated to giving you the very best of game news, with a focus on customer service and uniqueness.]
 
-  <footer class="footer-distributed mt-5" style="background-color: #1c1b1f; border-radius: 8px;">
+        This website with most popular gaming news (dummy data).User can see the news and contact us. Only admin can delete , update and submit the news.  
+
+        
+       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid placeat vero, cum reprehenderit temporibus, cupiditate quasi laboriosam iure, doloribus rem harum odit quam culpa ducimus cumque illum esse alias corporis!
+       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium incidunt, repellendus quibusdam eum fugit dignissimos ab tempora neque temporibus, quas perferendis ducimus illum dolorem, magnam assumenda quam numquam. Reiciendis.
+        
+        We hope you enjoy our products as much as we enjoy offering them to you. If you have any questions or comments, please don't hesitate to  <a href="/contact">Contact Us</a>
+        </h4>    
+  </div>
+<!-- Footer Start -->
+
+<footer class="footer-distributed mt-5" style="background-color: #1c1b1f; border-radius: 8px;">
     <div class="footer-left">
       <img src="img/gamae.jpg" alt="" class="flogo">
       <p class="footer-links">
@@ -47,7 +44,7 @@
     </div>
     <div class="footer-right">
       <p class="footer-company-about">
-        <span>About the page</span>
+        <span>About the Page</span>
         Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
       </p>
       <div class="footer-icons">
