--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -74,7 +74,7 @@
     </div>
     <div class="footer-right">
       <p class="footer-company-about">
-        <span>About the game</span>
+        <span>About the Page</span>
         Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
       </p>
       <div class="footer-icons">
