--- a/views/latest_news.ejs
+++ b/views/latest_news.ejs
@@ -8,16 +8,17 @@
       </nav>
     
     
-      <div class="row">
-    
+      <div class="row" style="justify-content: center;">
+        <div class="col-12"><h1><%- news.name %></h1></div>
+        <div class="col-12 mb-4"><i class="bi bi-tag"></i> <%- news.category %></div>
         <!-- <div class="col-12 col-md-4"> -->
           <img src="/img/<%- news.image %>" class="img-fluid" style="top: 20px;" alt="<%- news.name %>" loading="lazy">
         <!-- </div> -->
     
         <!-- <div class="col-12 col-md-8"> -->
           <div class="row">
-            <div class="col-12"><h1><%- news.name %></h1></div>
-            <div class="col-12 mb-4"><i class="bi bi-tag"></i> <%- news.category %></div>
+           
+            
             <div class="col-12 mb-4" style="white-space: pre-line;">
               <h4><%- news.description %></h4>
               <%- news.news %>
@@ -58,7 +59,7 @@
   </div>
   <div class="footer-right">
     <p class="footer-company-about">
-      <span>About the game</span>
+      <span>About the page</span>
       Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
     </p>
     <div class="footer-icons">
