--- a/views/submit_news.ejs
+++ b/views/submit_news.ejs
@@ -106,7 +106,7 @@
     </div>
     <div class="footer-right">
       <p class="footer-company-about">
-        <span>About the game</span>
+        <span>About the page</span>
         Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
       </p>
       <div class="footer-icons">
