--- a/views/layouts/main_layouts.ejs
+++ b/views/layouts/main_layouts.ejs
@@ -29,7 +29,9 @@
                 <li><a href="/about" class="nav-link px-2 link-secondary">About</a></li>
                 <li><a href="/contact" class="nav-link px-2 link-secondary">Contact</a></li>
                 <li><a href="/login" class="nav-link px-2 link-secondary">Login</a></li>
+                <% if(isAdmin == true){ %> 
                 <li><a href="/submit-news" class="nav-link px-2 link-secondary">Submit</a></li>
+                <% } %> 
 
               
             </ul>
