--- a/views/latest_news.ejs
+++ b/views/latest_news.ejs
@@ -13,8 +13,16 @@
         <div class="col-12 mb-4"><i class="bi bi-tag"></i> <%- news.category %></div>
         <!-- <div class="col-12 col-md-4"> -->
           <img src="/img/<%- news.image %>" class="img-fluid" style="top: 20px;" alt="<%- news.name %>" loading="lazy">
+
         <!-- </div> -->
-    
+        <div class="my-2">
+          <% if(isAdmin) {%>
+            <a class="btn btn-warning mr-2" href="/update/<%- news._id %> " role="button" style="width: 7%;">Update</a>
+            <a class="btn btn-danger mr-2" href="/delete/<%- news._id %> " role="button"  style="width: 7%;">Delete</a>
+            <% } %> 
+          </div>
+
+          </div>
         <!-- <div class="col-12 col-md-8"> -->
           <div class="row">
            
@@ -26,8 +34,7 @@
           <!-- </div> -->
         </div>
       </div>
-<% } %> 
-
+<% } %>
 
 
 <!-- Footer Start -->
